--- a/package.json
+++ b/package.json
@@ -8,9 +8,11 @@
     "@mui/icons-material": "^5.6.0",
     "@mui/material": "^5.6.0",
     "@redux-devtools/extension": "^3.2.2",
+    "@reduxjs/toolkit": "^1.8.1",
     "axios": "^0.27.2",
     "react": "^17.0.0",
     "react-dom": "^17.0.0",
+    "react-redux": "^8.0.1",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.0",
     "uuid": "^8.3.2"
