--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@redux-devtools/extension": "^3.2.2",
     "@reduxjs/toolkit": "^1.8.1",
     "axios": "^0.27.2",
+    "json-server": "^0.17.0",
     "react": "^17.0.0",
     "react-dom": "^17.0.0",
     "react-redux": "^8.0.1",
@@ -35,6 +36,7 @@
     "typescript": "^4.6.3"
   },
   "scripts": {
+    "server": "json-server -w ./database/db.json -p 8000",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
