--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "uuid": "^8.3.2"
   },
   "devDependencies": {
+    "@faker-js/faker": "^7.1.0",
     "@types/node": "^17.0.19",
     "@types/react": "^17.0.43",
     "@types/react-dom": "^17.0.14",
@@ -36,7 +37,7 @@
     "typescript": "^4.6.3"
   },
   "scripts": {
-    "server": "json-server -w ./database/db.json -p 8000",
+    "server": "json-server -w ./database/db.js -p 8000",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
